# cassandra-demo

./: pyproject.toml
.github/workflows/: tests.yml
cassandra_demo/: main.py
cassandra_demo/database/: __init__.py  migrations.py
cassandra_demo/repository/: async_base_model.py  client.py
tests/: __init__.py  test_client.py
